--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.js"></script>
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
     <script type="text/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="checkr/js/bootbox.min.js"></script>
+    <script type="text/javascript" src="bootbox.min.js"></script>
     <script type="text/javascript">
 
     function initialize() {  
